--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="hamburger">
             <div class="line"></div>
             <div class="line"></div>
+            <div class="line"></div>
         </div>
         <div class="list">
         <li><a href="">New Arrivals</a></li>
