--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <p>PANTS & SHORTS</p>
                 </div>
         </div>
-    </div><hr>
+    </div>
     <div class="footer">2023 &copy; TRENDS INC. All rights reserved </div>
 </body>
 </html>
