--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <p>SHOES</p>
             </div>
            <div class="img img3">
-            <img src="https://gumlet.assettype.com/freepressjournal/2022-08/f096b524-e20c-4369-8fc0-1271a6ffeb72/kundan.jpg?format=webp&w=400&dpr=2.6" alt="3">
+            <img src="https://media.istockphoto.com/id/1089264988/photo/jewelry-woman-young-woman-with-makeup-long-curly-hair-and-diamond-ring-necklace-and-earrings.jpg?s=612x612&w=0&k=20&c=zQTVnOEV6rgPT1YrcqXEFetN-1E7jx8VtFZa9M3OcfU=" alt="3">
                 <p>JEWELLERY</p>
             </div>
            <div class="img img4">
